src/portfolio_assets/index.css
/* ... */
.bg-animation-toggle__button[aria-checked="false"] .bg-animation-toggle__state {
	background-color: #ffffff00;
}

.main section {
	padding: 4em 0;
	border-bottom: 1px solid rgba(255, 255, 255, 0.12);
}

.main section:last-child {
	border-bottom: 0;
}

.main section h1 {
	margin: 0;
	font-size: 0.8em;
	font-family: "Space Mono", monospace;
	letter-spacing: 1.4em;
	margin-right: -1.4em;
	text-transform: uppercase;
	font-weight: normal;
	color: rgba(255, 255, 255, 0.6);
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0 0 0.6em 0;
}

@keyframes breatheAnimation {
	from {
		opacity: 0.1;
	}
	to {
		opacity: 0.5;
	}
}

@media all and (min-width: 41em) {
	.main section h1 {
		margin-right: 0;
	}

	.main section h1::before,
	.main section h1::after {
		content: "";
		padding: 0 2em;
		width: 25px;
		height: 15px;
		background-image: url("img/iamgrid_h1_dots.svg");
		background-repeat: no-repeat;
		background-position: center center;
		opacity: 0.3;
	}

	@media (prefers-reduced-motion: no-preference) {
		.main section h1::before, .main section h1::after {
			animation-name: breatheAnimation;
			animation-duration: 1.5s;
			animation-iteration-count: infinite;
			animation-direction: alternate;
			animation-timing-function: var(--breathe-bezier);
		}
	}

	.main section h1 span {
		transform: translateX(0.7em) translateY(1px);
	}
}

h2 {
	font-family: "Space Mono", monospace;
	font-size: 18px;
	line-height: 31px;
	font-weight: 400;
	font-style: normal;
	letter-spacing: 0;
	margin: 4.5em 0 0.5em;
	padding: 0 1em;
	text-align: center;
}

section h2:first-child {
	margin-top: 2.5em;
}

h2::after {
	content: "";
	display: block;
	width: 100%;
	height: 26px;
	background-image: url("img/iamgrid_h2_bottom.svg");
	background-repeat: no-repeat;
	background-position: center center;
	opacity: 0.3;
	margin-top: 0.5em;
}

hr {
	border: 0;
	width: 100%;
	height: 15px;
	background-image: url("img/iamgrid_separator.svg");
	background-repeat: no-repeat;
	background-position: center center;
	opacity: 0.3;
	margin: 0.8em 0;
}

.hr--type-2 {
	background-image: url("img/iamgrid_separator_2.svg");
	margin: 2em 0;
}

.hr--type-3 {
	background-image: url("img/iamgrid_single_dot.svg");
	margin: 0.8em 0;
}

@keyframes slideInSlideOutAnimation {
	0% {
		transform: translateX(-50px);
		opacity: 0;
	}
	25%, 75% {
		transform: translateX(0);
		opacity: 0.25;
	}
	50% {
		transform: translateX(0);
		opacity: 0.3;
	}
	100% {
		transform: translateX(50px);
		opacity: 0;
	}
}

@supports (animation-timeline: view()) {
	@media (prefers-reduced-motion: no-preference) {
		hr, h2::after {
			animation: slideInSlideOutAnimation;
			animation-fill-mode: both;
			animation-timeline: view();
		}
	}
}

.illustration-wrapper {
	display: flex;
	justify-content: center;
	padding: 0.5em 0 1em;
}

.about__text {
	text-align: justify;
}

@keyframes bounceAnimation {
	0% {
		transform: translateY(0);
	}
	100% {
		transform: translateY(-5px);
	}
}

.single__dot {
	opacity: 0.3;
}

@media (prefers-reduced-motion: no-preference) {
	.single__dot {
		animation-name: bounceAnimation;
		animation-iteration-count: infinite;
		animation-duration: 0.3s;
		/* animation-timing-function: ease-out; */
		animation-timing-function: var(--bounce-bezier);
		animation-direction: alternate-reverse;
	}
}

.about__hello {
	padding: 6px 0 1.3em;
}

.about__photo__proper {
	width: 120px;
	height: 120px;
}

.about__photo {
	padding-top: 1em;
}

.core-values__content {
	text-align: justify;
}

.core-values__content hr {
	margin: 0.75em 0;
}

.portfolio-radioset {
	display: grid;
	grid-template-columns: repeat(2, auto);
	justify-content: center;
	padding-bottom: 0.4em;
}

.portfolio-radioset button {
	display: block;
	width: 11em;
	background-color: rgba(255, 255, 255, 0.12);
	color: #ffffffa0;
	padding: 0.4em 0;
	border: 0;
	border-right: 1px solid #ffffff60;
	border-left: 1px solid #ffffff60;
	cursor: pointer;
	font-size: 0.8em;
	transition: all 0.25s;
}

.portfolio-radioset button:hover {
	color: #ffffffc0;
	background-color: rgba(255, 255, 255, 0.25);
}

.portfolio-radioset button:first-child {
	border-left-width: 0;
	border-radius: 4px 0 0 4px;
}

.portfolio-radioset button:last-child {
	border-right-width: 0;
	border-left: 1px solid #ffffff60;
	border-radius: 0 4px 4px 0;
}

.portfolio-radioset button[aria-checked='true'] {
	background-color: rgba(255, 255, 255, 0.5);
	color: white;
	cursor: default;
}

.portfolio-radioset button[aria-checked='true']:hover {
	background-color: rgba(255, 255, 255, 0.5);
}

.jump-to {
	font-size: 0.8em;
	line-height: 1.6em;
	color: rgba(255, 255, 255, 0.6);
	/* padding: 0 1em; */
	text-align: left;
}

.jump-to hr {
	margin-bottom: 1.8em;
}

.jump-to a {
	text-decoration: underline;
	font-weight: bold;
	cursor: pointer;
}

table {
	font-size: 0.9em;
	margin: 2em auto;
	border-collapse: collapse;
	text-align: left;
}

table thead tr th {
	border-bottom: 1px dashed #ffffff60;
	text-transform: uppercase;
	font-weight: normal;
	font-size: 0.8rem;
	opacity: 0.6;
	text-align: center;
}

table tbody {
	line-height: 1.5em;
}

table tbody tr:last-child td {
	border-bottom: 1px dashed #ffffff60;
	padding-bottom: 0.5rem;
}

table tr th, table tr td {
	padding: 0 1rem;
}

table tr td {
	padding-top: 0.5rem;
}

/* table tr:first-child td {
	padding-top: 0.5rem;
} */

table tr th:first-child, table tr td:first-child {
	padding-left: 1rem;
}

table tr th:last-child, table tr td:last-child {
	padding-right: 1rem;
}

.table-wrapper {
	margin: 2em 0;
	display: flex;
	justify-content: center;
}

.table-wrapper table {
	margin: 0;
}

.table-notes {
	font-size: 0.7em;
	opacity: 0.6;
	padding-left: 1rem;
	padding-top: 2px;
}

.milestones .portfolio-radioset {
	margin-top: 1em;
}

.milestones__view {
	display: none;
}

.milestones__view--active {
	display: block;
}

.milestones__content {
	text-align: justify;
}

.milestones__content hr {
	margin-top: 0.5em;
	margin-bottom: calc(0.5em - 6px);
}
/* ... */

